--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,3 +6,7 @@ label.collapsible-checkbox-label span {
 .ui-checkbox .ui-btn-icon-left .ui-btn-inner, .ui-radio .ui-btn-icon-left .ui-btn-inner {
 	padding-left: 0px;
 }
+
+.hidden {
+	display: none;
+}
